# sonarfix-agent

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/sonarfix/: action.yml
.github/workflows/: ci.yml  sonarfix-example.yml
docker/windsurf/: build.sh
docker/windsurf/src/scripts/: entrypoint.sh
sonarfix/: __init__.py  api.py  cli.py  config.py  db.py
sonarfix/fixer/: __init__.py  context_extractor.py  graph.py  llm_fixer.py  planner.py  prompt.py  windsurf.py
sonarfix/git/: __init__.py  manager.py
sonarfix/rag/: __init__.py  store.py
sonarfix/reporting/: __init__.py  report.py
sonarfix/sonarqube/: __init__.py  client.py  filters.py  models.py
sonarfix/validator/: __init__.py  checker.py
tests/: test_context_extractor.py  test_filters.py  test_graph.py  test_llm_fixer.py  test_models.py  test_planner.py  test_rag_store.py  test_report.py  test_windsurf.py
web/: package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/history/: page.tsx
web/app/settings/: page.tsx
web/components/: language-badges.tsx
web/components/ui/: badge.tsx  select.tsx
