[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sonarfix-agent"
version = "0.1.0"
description = "Agent that pulls SonarQube issues and auto-fixes them using LLM-powered code generation"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27.0",
    "typer[all]>=0.12.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "gitpython>=3.1.0",
    "docker>=7.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["sonarfix*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
embeddings = [
    "sentence-transformers>=2.7.0",
]
tokens = [
    "tiktoken>=0.7.0",
]
all = [
    "sentence-transformers>=2.7.0",
    "tiktoken>=0.7.0",
]

[project.scripts]
sonarfix = "sonarfix.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
